Fix overflowing elements

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ button:active {
 }
 .projects-contr {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 8px;
 }
 .projects-contr > div:not(.empty-content) {
@@ -142,6 +142,12 @@ button:active {
 #this-week-contr .flex-list-item {
     border: none;
     box-shadow: var(--shadow);
+}
+.task-name {
+    max-width: 110px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .task-lbl {
     text-transform: uppercase;
